웹표준 레이아웃 만들기

--- a/index.html
+++ b/index.html
@@ -4,9 +4,136 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div id="head_top">
+            <div class="container">
+                <ul class="head_top_left">
+                    <li class="logo">SSG.COM</li>
+                    <li class="input"><input type="text"></li>
+                    <li class="lank">6.남성패딩</li>
+                </ul>
+                <div class="head_top_right">
+                    <ul class="log">
+                        <li>로그인</li>
+                        <li>회원가입</li>
+                        <li>고객센터</li>
+                    </ul>
+                    <ul>ㅣ</ul>
+                    <ul class="icon">
+                        <li>하트</li>
+                        <li>사람</li>
+                        <li>트럭</li>
+                        <li>카트</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="head_middle">
+            <ul class="container">
+                <li class="Emart_logo">emartmall</li>
+                <li class="middle_center">
+                    <div class="m_center_input"><input type="text"></div>
+                    <div class="m_center_img">사과사진</div>
+                </li>
+                <li class="peacock">peacock</li>
+            </ul>
+        </div>
+        <div id="head_bottom">
+            <div class="container">
+                <ul class="he_bo">
+                    <li class="he_bo_le">이마트카테고리</li>
+                    <li class="he_bo_ce">
+                        <p>신상품</p>
+                        <p>신상품</p>
+                        <p>신상품</p>
+                        <p>신상품</p>
+                        <p>신상품</p>
+                        <p>신상품</p>
+                        <p>신상품</p>
+                        <p>신상품</p>
+                        <p>신상품</p>
+                    </li>
+                    <li class="he_bo_ri">쏙-배송 시간을 확인하세요</li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="cont1_top">
+        <div class="container">
+            <ul>
+                <li>이마트몰 / </li>
+                <li> 생수.음료.주류 / </li>
+                <li> 생수</li>
+            </ul>
+        </div>
+    </div>
+    <section id="cont1">
+        <div class="pop container">
+            <div class="pop_rela">
+                <ul class="pop_L">
+                    <li class="pop_Ltop"></li>
+                    <li class="pop_Lbottom"></li>
+                </ul>
+                <ul class="pop_R">
+                    <li class="pop_Rtop"></li>
+                    <li class="pop_Rbottom"></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <ul class="cont1">
+                <li class="cont1_L">
+                    <div class="cont1_L_1">
+                        <div class="img"><img src="" alt=""></div>
+                        <div class="slide">
+                            <div class="slide_le"></div>
+                            <ul class="slide_img">
+                                <li><img src="" alt=""></li>
+                                <li><img src="" alt=""></li>
+                                <li><img src="" alt=""></li>
+                                <li><img src="" alt=""></li>
+                            </ul>
+                            <div class="slide_ri"></div>
+                        </div>
+                    </div>
+                    <ul class="cont1_L_2">
+                        <li>고객리뷰</li>
+                        <li>
+                            <ul class="cont1_L2_ul">
+                                <li class="cont1_L2_center">
+                                    <ul class="star">
+                                        <li>ㅇㅇㅇㅇㅇ</li>
+                                        <li>4.9 <span>(282.8112건)</span></li>
+                                    </ul>
+                                </li>
+                                <li class="cont1_icon">
+                                    <ul>
+                                        <li class="icon_facebook">f</li>
+                                        <li class="icon_twitter">T</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        
+                    </ul>
+                    <div class="cont1_L_3">
+                        <p>연관기획전</p>
+                        <ul>
+                            <li><img src="" alt=""><span>집에서 즐기는 고품격 식사</span></li>
+                            <li><img src="" alt=""><span>집에서 즐기는 고품격 식사</span></li>
+                            <li><img src="" alt=""><span>집에서 즐기는 고품격 식사</span></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="cont1_R"></li>
+            </ul>
+        </div>
+    </section>
+    <section></section>
+    <section></section>
 </body>
 </html>
